grid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-deploy
  namespace: grid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grid
  template:
    metadata:
      labels:
        app: grid
    spec:
      containers:
      - name: grid
        image: repo.matzen.io/grid:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
