grid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grid-service
spec:
  type: NodePort
  selector:
    app: grid
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30081
